--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -1,46 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VerifyPhoneActivity"
     android:orientation="vertical"
-    >
+    android:padding="30dp">
+    <ImageView
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:id="@+id/logo"
+        android:src="#555555">
+    </ImageView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome,"
+        android:textSize="28sp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp">
+    </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign up to continue"
+        android:textColor="#DF8600"
+        android:textSize="20sp">
+    </TextView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OTP"
-        android:textSize="32sp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:textSize="18sp"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="10dp"
+        android:textColor="#000000"
         />
 
     <EditText
         android:id="@+id/edtCode"
+        android:hint="Enter OTP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"
-        android:hint="Enter OTP"
-        android:layout_marginBottom="10dp"
-        android:inputType="textPersonName"
+        android:inputType="number"
+        android:layout_marginBottom="40dp"
         />
 
     <Button
         android:id="@+id/btnVerify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:text="VERIFY"
         android:textStyle="bold"
+        android:background="@drawable/button"
+        android:textColor="#FFFFFF"
+        android:inputType="number"
         />
 
 </LinearLayout>
