--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,27 +3,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
-    android:orientation="vertical"
     >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hogya"
-        android:textSize="32sp"
-        android:layout_marginTop="100dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textStyle="bold"
+    <Button
+        android:layout_width="wrap_content"
+        android:id="@+id/btn"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="30dp"
+        android:text="Choose Image"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:id="@+id/btnCamera"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="20dp"
+        android:text="Choose Image from Camera"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="150dp"
+        android:layout_height="200dp"
+        android:id="@+id/iv"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:text="upload"
+        android:id="@+id/btnUpload"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="150dp"
+        android:layout_height="wrap_content"/>
+
 
     <Button
         android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:layout_margin="10dp"
         android:text="Next User"
         />
 
