--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,39 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
     >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:id="@+id/btn"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="30dp"
-        android:text="Choose Image"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:id="@+id/btnCamera"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="20dp"
-        android:text="Choose Image from Camera"
+
+    <TextView
+        android:layout_width="match_parent"
+        android:textSize="26sp"
+        android:text="Upload Image"
+        android:padding="20dp"
+        android:textColor="#000000"
         android:layout_height="wrap_content"/>
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="150dp"
-        android:layout_height="200dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/iv"
-        />
+        android:background="#A2A2A2"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="10dp"
+        android:paddingHorizontal="10dp"
+        android:layout_width="196dp"
+        android:layout_height="196dp"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"/>
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:padding="8dp"
+            android:id="@+id/btn"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="80dp"
+            android:background="@drawable/borderlayout"
+            android:text="Gallery"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:id="@+id/btnCamera"
+            android:background="@drawable/borderlayout"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:text="Camera"
+            android:padding="8dp"
+            android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+
     <Button
         android:layout_width="wrap_content"
-        android:text="upload"
+        android:text="Upload"
         android:id="@+id/btnUpload"
+        android:background="@drawable/borderlayout"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="150dp"
+        android:padding="8dp"
+        android:layout_marginLeft="140dp"
         android:layout_height="wrap_content"/>
 
 
@@ -43,7 +73,8 @@
         android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:background="@drawable/borderlayout"
+        android:layout_margin="30dp"
         android:text="Next User"
         />
 
